# robot_server

./: .gitignore  CMakeLists.txt  README.md  package.xml  robot_properties.yml
include/BrickPi3/: BrickPi3.h  bp_spi.h
include/robot/: constants.h  motion_model.h  motors.h  pose.h  processing.h  robot_model.h  sensor.h  sensors.h  speed_units.h  visualization.h
include/robot_rpi/: sensors.h
include/robot_server/: constants.h  motion_model.h  odometry_components.h  pose.h  processing.h  robot_model.h  rotary_encoders.h  sensor.h  speed_units.h  visualization.h
launch/: server_launch.py
misc/: sensor_pose_calculator.py
msg/: Motors.msg  Robot.msg  Sensors.msg
src/: BrickPi3.cpp  bp_spi.cpp  controls.cpp  controls_main.cpp  motion_model.cpp  pose.cpp  processing.cpp  processing_main.cpp  robot_model.cpp  sensors.cpp  server.cpp  visualization.cpp  visualization_server.cpp
srv/: RobotControl.srv
